<resources>
    <string name="app_name">PlaceReminder</string>
    <string name="FILE_PLACEHOLDER">placeholders.txt</string>
    <string name="FILE_SETTINGS">settings.txt</string>
    <string name="MAP">Mappa</string>
    <string name="SAVED_PLACEHOLDER">Salvati</string>
    <string name="NOTIFICATIONS">Notifiche</string>
    <string name="SETTINGS">Impostazioni</string>
    <string name="ADD">Aggiungi</string>
    <string name="ADD_PLACEHOLDER">Aggiungi Segnaposto</string>
    <string name="ADD_A_PLACEHOLDER">Aggiungi un segnaposto</string>
    <string name="SEARCH_HERE">Cerca qui</string>
    <string name="NAME">Nome</string>
    <string name="DESCRIPTION">Descrizione</string>
    <string name="LONGITUDE">Longitudine</string>
    <string name="LATITUDE">Latitudine</string>
    <string name="EDIT_PLACEHOLDER">Modifica Segnaposto</string>
    <string name="EDIT">Modifica</string>
    <string name="ERROR_EXIST_PLACEHOLDER">Esiste già un segnaposto con questo nome!</string>
    <string name="ERROR_DONT_EXIST_PLACEHOLDER">Non esiste nessun segnaposto con il nome di  %s !</string>
    <string name="ERROR_INVALID_DATA">Dati invalidi</string>
    <string name="CONFIRM_DELETE">Conferma eliminazione</string>
    <string name="REQUEST_CONFIRM_DELETE">Sei sicuro di voler eliminare questo elemento?</string>
    <string name="CONFIRM">Conferma</string>
    <string name="CANCEL">Annulla</string>
    <string name="LAST_UPDATE">Data ultima modifica: %s</string>
    <string name="CREATION_DATE">Data creazione: %s</string>
    <string name="SET_COORDINATE">Imposta Coordinate iniziali</string>
    <string name="TYPE_MAP_STRING">Seleziona il tipo di mappa</string>
    <string name="SELECT_PLACEHOLDER_COLOR">Seleziona il colore dei segnaposti</string>

    <string-array name="TypeMap">
        <item>Normale</item>
        <item>Satellite</item>
        <item>Terrestre</item>
        <item>Ibrida</item>
    </string-array>

    <string-array name="ColorPlaceholder">
        <item>Blu</item>
        <item>Verde</item>
        <item>Arancione</item>
        <item>Rosa</item>
        <item>Viola</item>
        <item>Rosso</item>
        <item>Giallo</item>
    </string-array>


</resources>