<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/rounded_for_dialog_fragment"
    tools:context=".AddPlaceholderDialogFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ADD_PLACEHOLDER"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/lavender"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/namePlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NAME"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="text|textCapSentences"
        android:minHeight="48dp"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/descriptionPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DESCRIPTION"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="text|textCapSentences"
        android:minHeight="48dp"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/light_blue"
        android:text="@string/ADD"
        android:textColor="@android:color/white" />

</LinearLayout>
