<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/namePlaceholderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NAME"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionPlaceholderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DESCRIPTION"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lastUpdateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/ERROR_INVALID_DATA" />

        <TextView
            android:id="@+id/creationDateTextView"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/ERROR_INVALID_DATA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/light_gray"
                app:srcCompat="@drawable/ic_baseline_edit_note_24" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/light_gray"
                app:srcCompat="@drawable/ic_baseline_close_24" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
