<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/design_default_color_on_secondary"
    tools:context=".SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/SETTINGS"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/typeCoordinateSwitch"
            android:layout_width="214dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:text="Imposta coordinate" />

        <ViewSwitcher
            android:id="@+id/viewSwitcherCoordinates"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:gravity="bottom|center"
                    android:text="Imposta segnaposto come centro mappa"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/selectPlaceholderSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="106dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setCoordinateLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Imposta latitudine:" />

                <EditText
                    android:id="@+id/setLatitudeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:backgroundTint="@color/light_gray"
                    android:hint="@string/LATITUDE"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Imposta longitudine:" />

                <EditText
                    android:id="@+id/setLongitudeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:backgroundTint="@color/light_gray"
                    android:hint="@string/LONGITUDE"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

            </LinearLayout>
        </ViewSwitcher>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/TypeMapSpinner"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:entries="@array/TypeMap" />

            <ImageView
                android:id="@+id/TypeMapImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/map_normal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/ColorPlaceholderSpinner"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:entries="@array/ColorPlaceholder"/>

            <ImageView
                android:id="@+id/ColorPlaceholderImageView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_location_place_blue" />

        </LinearLayout>

        <Button
            android:id="@+id/saveDatesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lavender"
            android:text="Convalida dati" />


    </LinearLayout>
</ScrollView>